<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.LoginFragment_0">

    <TextView
        android:id="@+id/tv_email_login_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="132dp"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_passwd_login_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:text="@string/passwd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@id/tv_email_login_0"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_login_0" />

    <EditText
        android:id="@+id/et_email_login_0"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/tv_email_login_0"
        app:layout_constraintTop_toTopOf="@+id/tv_email_login_0"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_passwd_login_0"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/et_email_login_0"
        app:layout_constraintTop_toTopOf="@+id/tv_passwd_login_0"
        android:autofillHints="" />

    <Switch
        android:id="@+id/sw_remember_login_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/remeber_me"
        app:layout_constraintEnd_toEndOf="@+id/et_passwd_login_0"
        app:layout_constraintTop_toBottomOf="@+id/et_passwd_login_0" />

    <Button
        android:id="@+id/bt_login_0"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passwd_login_0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_helper_login_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/helper"
        android:src="@android:drawable/ic_menu_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>