<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.LoginFragment_0">

    <EditText
        android:id="@+id/et_passwd2_register_0"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/et_passwd_register_0"
        app:layout_constraintTop_toTopOf="@+id/tv_passwd2_register_0" />

    <TextView
        android:id="@+id/tv_passwd2_register_0"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:layout_marginTop="86dp"
        android:text="再次輸入密碼"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_passwd_register_0"
        app:layout_constraintTop_toBottomOf="@+id/tv_passwd_register_0" />

    <TextView
        android:id="@+id/tv_passwd_register_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:text="@string/passwd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/tv_email_register_0"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_register_0" />

    <EditText
        android:id="@+id/et_email_refister_0"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/tv_email_register_0"
        app:layout_constraintTop_toTopOf="@+id/tv_email_register_0" />

    <EditText
        android:id="@+id/et_passwd_register_0"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/tv_passwd_register_0"
        app:layout_constraintTop_toTopOf="@+id/tv_passwd_register_0" />

    <Button
        android:id="@+id/bt_register_0"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="註冊"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passwd2_register_0" />

    <TextView
        android:id="@+id/tv_email_register_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="132dp"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_helper_register_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/helper"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>